--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "h5",
-    "version": "0.1.0",
+    "name": "h5_light",
+    "version": "0.4.0",
     "devDependencies": {
         "grunt": "~0.4.4",
         "grunt-contrib-jshint": "*",
